syntax = "proto3";
option java_multiple_files = true;
option java_package = "via.sep3.grpcserver.protobuf.tripservices";

service TripServices {
  rpc createTrip (TripCreationRequest) returns (TripResponse);
  rpc getTripsByUserID (TripsByDriverIDRequest) returns (TripsByDriverIDResponse);
  rpc getAllTrips (Emptymessage) returns (TripsByDriverIDResponse);
}
message Emptymessage{

}

message TripCreationRequest { 
  double full_price = 1;
  int32 available_seats = 2;
  string driver_id = 3;
  repeated Location stops = 4;
  
  message Location {
    string post_code = 1;
    string city = 2;
    string street_name = 3;
    string street_number = 4;
    string arrival_time = 5;
  }
}

message TripResponse {
  int64 id = 1;
  double full_price = 2;
  int32 available_seats = 3;
  string driver_id = 4;
  repeated Location stops = 5;
  repeated SeatTicketResponseB tickets = 6;
  
  message Location {
    int64 id = 1;
    string post_code = 2;
    string city = 3;
    string street_name = 4;
    string street_number = 5;
    string arrival_time = 6;
  }
}
message SeatTicketResponseB {
  int64 id = 1;
  double seat_price = 2;
  int32 total_seats = 3;
  string passenger_id = 4;
  int64 trip_id = 5;
  int64 pickup_id = 6;
  int64 dropoff_id = 7;
}


message TripsByDriverIDRequest {
   string user_id = 1;
}

message TripsByDriverIDResponse {
  repeated TripResponse trips = 1;
}
